# openmoonray

./: CMakeLists.txt  CMakeMoonrakerPresets.json  CMakePresets.json  CMakeVcpkgWindowsPresets.json  vcpkg.json
building/Windows/: windows_build.md
moonray/: CMakeLists.txt
scripts/: setup.cmd
